[gd_scene load_steps=11 format=3 uid="uid://chcffv7xahe1u"]

[ext_resource type="Script" path="res://Buildings/Base/base.gd" id="1_rcxq8"]
[ext_resource type="Texture2D" uid="uid://bakdcwewv820" path="res://Assets/Buildings/hq_build.png" id="2_msyjy"]
[ext_resource type="Texture2D" uid="uid://bcs513p8qtavr" path="res://Assets/Units/healthbarUnder.png" id="3_8vxph"]
[ext_resource type="Texture2D" uid="uid://dhui6y403snrs" path="res://Assets/Buildings/barracks.png" id="3_31jc6"]
[ext_resource type="Texture2D" uid="uid://bkch8xx3r1esm" path="res://Assets/Units/healthbarProgress.png" id="4_p5w77"]
[ext_resource type="AudioStream" uid="uid://blfbh7gypedpi" path="res://Assets/SFX/bruiser_spawn.wav" id="6_mg2h7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ke4o0"]
size = Vector2(48, 84)

[sub_resource type="CircleShape2D" id="CircleShape2D_3bx1k"]
radius = 184.0

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_yob7o"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 2
properties/1/path = NodePath(".:team")
properties/1/spawn = true
properties/1/replication_mode = 2
properties/2/path = NodePath(".:is_placed")
properties/2/spawn = true
properties/2/replication_mode = 2
properties/3/path = NodePath(".:is_active")
properties/3/spawn = true
properties/3/replication_mode = 2
properties/4/path = NodePath("Healthbar:value")
properties/4/spawn = true
properties/4/replication_mode = 2
properties/5/path = NodePath(".:max_hp")
properties/5/spawn = true
properties/5/replication_mode = 2
properties/6/path = NodePath(".:health")
properties/6/spawn = true
properties/6/replication_mode = 2
properties/7/path = NodePath(".:is_following_mouse")
properties/7/spawn = true
properties/7/replication_mode = 2

[sub_resource type="CircleShape2D" id="CircleShape2D_p2ros"]
radius = 184.0

[node name="Headquarters" type="StaticBody2D"]
collision_mask = 3
script = ExtResource("1_rcxq8")
sprite_texture = ExtResource("2_msyjy")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("3_31jc6")

[node name="BuildingCollisionShape" type="CollisionShape2D" parent="."]
position = Vector2(0, -2)
shape = SubResource("RectangleShape2D_ke4o0")

[node name="MiningUnitDetectionArea" type="Area2D" parent="."]
collision_mask = 2049

[node name="CollisionShape2D" type="CollisionShape2D" parent="MiningUnitDetectionArea"]
shape = SubResource("CircleShape2D_3bx1k")

[node name="Healthbar" type="TextureProgressBar" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -72.0
offset_top = 112.0
offset_right = 74.0
offset_bottom = 138.0
grow_horizontal = 2
grow_vertical = 0
rounded = true
nine_patch_stretch = true
texture_under = ExtResource("3_8vxph")
texture_progress = ExtResource("4_p5w77")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_yob7o")

[node name="DetectionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_p2ros")

[node name="Border" type="Line2D" parent="."]

[node name="Label" type="Label" parent="."]
visibility_layer = 1023
offset_left = 40.0
offset_top = -45.0
offset_right = 234.0
offset_bottom = -22.0
theme_override_colors/font_color = Color(0.921569, 0.231373, 0.231373, 1)
text = "Position too far from HQ!"

[connection signal="body_entered" from="MiningUnitDetectionArea" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="MiningUnitDetectionArea" to="." method="_on_area_2d_body_exited"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
